Updated product microservice for documentation and added main swagger hub
